# Razrabotchik-C_-v5

./: CMakeLists.txt  README.md
app/: main.cpp  tests.txt
include/: file_logger.h  logger.h  logger_factory.h  socket_logger.h
src/: file_logger.cpp  logger.cpp  logger_factory.cpp  socket_logger.cpp
